src/css/home.module.css
.central {
    letter-spacing: 4px;

    /* position: fixed;
    left: 0;
    right: 0; */

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;

    height: inherit;
}

.title {
    font-size: 100px;
    color: var(--primaryText);
    line-height: 90%;
}

.clickable {
    /* Remove button styling */
    all: unset;
    cursor: pointer;
}

.subtitle {
    line-height: 30px;
    color: var(--secondaryText);
    text-align: justify;
    padding-top: 12px;
    width: 95%;
    text-shadow: 1px 1px var(--primaryBackground);
    white-space: pre-wrap;
}

/* Enable accessibility highlighting when tab focus to the button */
.subtitle:focus-visible {
    outline: var(--primaryText) 4px auto;
}

/* Used to add content so justify works on single line */
.subtitle:after {
    content: "";
    display: inline-block;
    width: 100%;
}

.subtitle > * {
    margin-top: 16px;
}

.centralText {
    top: 33%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.options {
    top: 33%;
    margin-top: 240px;

    display: flex;
    flex-direction: column;
}

/* Remove the default stlying for <a> elements created by react-router */
.options > a {
    color: inherit;
    text-decoration: none;
    width: fit-content;
}

.option {
    font-size: 30px;
    line-height: 160%;
    width: fit-content;
    transform: scale(1);
    transition: transform 0.5s;
    margin-left: 24px;
}

.option:hover {
    transform: scale(1.05);
}

.centralContentRow {
  width: 1000px;
}

.hiddenSmiley {
    /* position: fixed; */
    top: 33%;
    transform: translate(-530px, -60px) rotateZ(45deg);
    font-size: 60px;

    letter-spacing: 0px;
    color: var(--tertiaryText);

    line-height: 50px;
    overflow: hidden;
    /* margin-top: -64px; */
}

.orange {
    color: var(--primaryHighlight);
}

